# plankalkul-compiler

./: .gitignore  LICENSE  PLAN.md  README.md  build.bat  dune-project  install_deps.bat  plankalkul.opam
.github/workflows/: ci.yml  release.yml
doc/: FEATURES.md  FILE_EXTENSIONS.md
docs/: HISTORICAL_ACCURACY_REVIEW.md
docs/manuscripts/: README.md
src/ast/: dune  syntax.ml  type_parser.ml  types.ml
src/codegen/: c_emit.ml  dune  pp_2d.ml
src/errors/: dune  error_render.ml  error_types.ml
src/lexer/: dune  grid.ml  lexer_2d.ml  lexer_linear.ml  tokens.ml
src/parser/: dune  parser.ml
src/provenance/: dune  sources.ml
src/typing/: check.ml  dune  infer.ml  recursion.ml  resolve.ml
test/: dune  test_codegen.ml  test_lexer.ml  test_main.ml  test_parser.ml  test_types.ml
test/hovestar/: factorial.pk  factorial.pk2d  reverse.pk  sort.pk
test/integration/: README.md  run_tests.bat  run_tests.sh  test_manifest.txt
test/samples/: abs_test.pk2d  add.c  add2d.pk2d  array_simple.pk  array_tuple.pk  cardinality.pk  chess_board.pk  chess_types.pk2d  component.pk2d  component_test.pk  delta_and_tables.pk  delta_unicode.pk  factorial.c  factorial.pk  filter.pk  filters_full.pk  fin_test.pk  greek_coords.pk  iterator_test.pk  iterators.pk  knight.pk2d  knight_simple.pk2d  loop2d.pk2d  loop_multi.pk2d  memory_stress.pk  multi_error_test.pk  nullary.pk  plan_call.pk  plan_groups.pk  quantifiers.pk  quantifiers_filters.pk  quantifiers_full.pk  recursive.pk  simple.pk  simple2d.pk2d  single_delta.pk  tuple_test.pk  twoblock.pk2d  w_loop.pk  w_loops_all.pk  (+3 more)
(+18 files in other folders)
